--- a/prot.css
+++ b/prot.css
@@ -32,4 +32,28 @@ nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
+    /* font-weight: 500; */
+   
+  }
+  nav li {
+    margin: 0 0px;
+    padding:3rem;
+    font-weight: 500;
+ 
+  }
+  nav a {
+    color: rgb(12, 12, 12);
+    text-decoration: none;
+    font-size: 26px;
+    /* border: 0.2rem solid black; */
+  }
+  nav a:hover {
+    color: rgb(151, 153, 222);
+    height:2rem;
+    width: 8rem;
+    font-size: 3rem;
+    /* border-radius: 3rem; */
+    border:2px;
+    background-color:black;
+    
   }
