--- a/prot.css
+++ b/prot.css
@@ -33,27 +33,29 @@ nav ul {
     margin: 0;
     padding: 0;
     /* font-weight: 500; */
-   
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
   nav li {
     margin: 0 0px;
     padding:3rem;
     font-weight: 500;
+    font-size:x-large;
+  
+
  
   }
   nav a {
     color: rgb(12, 12, 12);
     text-decoration: none;
     font-size: 26px;
-    /* border: 0.2rem solid black; */
+    
   }
   nav a:hover {
-    color: rgb(151, 153, 222);
+    color: rgb(243, 243, 245);
     height:2rem;
-    width: 8rem;
+    width: 9rem;
     font-size: 3rem;
     /* border-radius: 3rem; */
-    border:2px;
     background-color:black;
     
   }
