--- a/prot.css
+++ b/prot.css
@@ -2,11 +2,11 @@
     position: relative;
     width: 100%;
     height: 80rem;
-    background-image: url("four.jpg");
+    background-image: url("lak.jpg");
     border-radius: 0;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: bottom;
+    background-position: center;
     background-origin: border-box;
 }
 
@@ -21,8 +21,8 @@ nav {
     justify-content: space-between;
     align-items: center;
     /* background-color: #333; */
-    width: 50rem;
-    height: 5rem;
+    width: 55rem;
+    height: 4.5rem;
     background: white;
     left: 56rem;
     top:2rem;
@@ -34,28 +34,47 @@ nav ul {
     padding: 0;
     /* font-weight: 500; */
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    
   }
   nav li {
     margin: 0 0px;
     padding:3rem;
-    font-weight: 500;
+    font-weight: 700;
     font-size:x-large;
-  
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 
- 
   }
   nav a {
     color: rgb(12, 12, 12);
     text-decoration: none;
     font-size: 26px;
-    
+    padding: 0;
+    margin:0;
+    border: 1px;
   }
   nav a:hover {
     color: rgb(243, 243, 245);
     height:2rem;
-    width: 9rem;
+    width: 5rem;
     font-size: 3rem;
     /* border-radius: 3rem; */
     background-color:black;
-    
+  }
+  .pro{
+    position: absolute;
+    width: 538px;
+    height: 73px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 32px;
+    line-height: 16px;
+    color: #fcf3f3;
+    left:6rem;
+    top:15rem;
+  }
+  .hom{
+    background-color: black;
+    color: white;
+   
   }
