--- a/prot.css
+++ b/prot.css
@@ -6,7 +6,7 @@
     border-radius: 0;
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position:right;
     background-origin: border-box;
 }
 
@@ -63,15 +63,16 @@ nav ul {
   .pro{
     position: absolute;
     width: 50rem;
-    height: 5rem;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-style:italic;
+    height: 40rem;
+    /* font-family:Verdana, Geneva, Tahoma, sans-serif; */
+    font-family: Arial, Helvetica, sans-serif;
+    /* font-style:italic; */
     font-weight: 900;
     font-size: 32px;
     line-height: 16px;
     color: #fcf3f3;
     word-spacing: 1.2rem;
-    left:6rem;
+    left:13rem;
     top:15rem;
   }
   .hom{
