--- a/prot.css
+++ b/prot.css
@@ -1,4 +1,8 @@
-.photo {
+
+*{
+    margin: 0;
+    padding:0;
+}.photo {
     position: relative;
     width: 100%;
     height: 80rem;
@@ -16,16 +20,16 @@ background: #9C9191;
 left:64rem; */
 
 nav {
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
     /* background-color: #333; */
-    width: 55rem;
-    height: 4.5rem;
+    width: 53rem;
+    height: 4.3rem;
     background: white;
     left: 56rem;
-    top:2rem;
+    top:4rem;
 }
 nav ul {
     display: flex;
@@ -50,7 +54,7 @@ nav ul {
     font-size: 26px;
     padding: 0;
     margin:0;
-    border: 1px;
+    /* border: 1px; */
   }
   nav a:hover {
     color: rgb(243, 243, 245);
@@ -62,21 +66,64 @@ nav ul {
   }
   .pro{
     position: absolute;
-    width: 50rem;
-    height: 40rem;
+    width: 70rem;
+    height: 50rem;
     /* font-family:Verdana, Geneva, Tahoma, sans-serif; */
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, sans-serif;
     /* font-style:italic; */
     font-weight: 900;
-    font-size: 32px;
-    line-height: 16px;
-    color: #fcf3f3;
-    word-spacing: 1.2rem;
-    left:13rem;
-    top:15rem;
+    font-size: 6.5rem;
+    line-height:8rem;
+    color: #cbaeae;
+    word-spacing: 1.8rem;
+    left:5rem;
+    top:8rem;
   }
   .hom{
     background-color: black;
     color: white;
   }
+  .newp{
+    position: relative;
+    width: 100%;
+    height: 80rem;
+    background-color: #dbd5d5;
+    border-radius: 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position:right;
+    background-origin: border-box;
+  }
+  .par{
+    position: absolute;
+    width: 100%;
+    height: 50rem;
+    font-family: Arial, sans-serif;
+    font-weight: 100;
+    font-size: 2rem;
+    line-height:8rem;
+    color: #514747;
+    word-spacing: 1rem;
+    align-items: center;
+    text-align: center;
+    /* left:5rem; */
+    top:6rem;
+  }
+  .parr{
+    position: relative;
+    width: 100%;
+    height: 50rem;
+    /* font-family: Arial, sans-serif; */
+    font-weight: 900;
+    font-style: italic ;
+    font-size: 7rem;
+    line-height:10rem;
+    color: #121111;
+    word-spacing: 1rem;
+    align-items: center;
+    text-align: center;
+    top:13rem;
+    text-decoration: underline;
+  }
+  
   
