--- a/prot.css
+++ b/prot.css
@@ -2,7 +2,9 @@
 *{
     margin: 0;
     padding:0;
-}.photo {
+    box-sizing: border-box;
+}
+.photo {
     position: relative;
     width: 100%;
     height: 80rem;
@@ -27,7 +29,7 @@ nav {
     /* background-color: #333; */
     width: 53rem;
     height: 4.3rem;
-    background: white;
+    /* background: white; */
     left: 56rem;
     top:4rem;
 }
@@ -49,7 +51,7 @@ nav ul {
 
   }
   nav a {
-    color: rgb(12, 12, 12);
+    color: rgb(249, 244, 244);
     text-decoration: none;
     font-size: 26px;
     padding: 0;
@@ -62,7 +64,7 @@ nav ul {
     width: 5rem;
     font-size: 3rem;
     /* border-radius: 3rem; */
-    background-color:black;
+    background-color:rgb(60, 203, 228);
   }
   .pro{
     position: absolute;
@@ -79,10 +81,10 @@ nav ul {
     left:5rem;
     top:8rem;
   }
-  .hom{
+  /* .hom{
     background-color: black;
-    color: white;
-  }
+    color: white; */
+  /* } */
   .newp{
     position: relative;
     width: 100%;
