--- a/prot.css
+++ b/prot.css
@@ -8,7 +8,7 @@
     position: relative;
     width: 100%;
     height: 80rem;
-    /* background-image: url("lak.jpg"); */
+    background-image: url("lak.jpg");
     border-radius: 0;
     background-size: cover;
     background-repeat: no-repeat;
@@ -26,10 +26,8 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: #333; */
     width: 53rem;
     height: 4.3rem;
-    /* background: white; */
     left: 56rem;
     top:4rem;
 }
@@ -115,5 +113,17 @@ nav ul {
     top:13rem;
     text-decoration: underline;
   }
-  
+  .desc{
+    position: absolute;
+    width: 70rem;
+    height: 50rem;
+    font-family: 'Arial Narrow', Arial, sans-serif;
+    font-weight: 100;
+    font-size: 1.7rem;
+    line-height:3rem;
+    color: #141313;
+    word-spacing: 0.5rem;
+    text-align: center;
+    top:25rem;
+  }
   
