--- a/prot.css
+++ b/prot.css
@@ -58,7 +58,7 @@ nav ul {
     height:2rem;
     width: 5rem;
     font-size: 3rem;
-    background-color:rgb(60, 203, 228);
+    background-color:rgb(52, 97, 105);
   }
   .pro{
     position: absolute;
@@ -76,8 +76,9 @@ nav ul {
   .newp{
     position: relative;
     width: 100%;
-    height: 80rem;
-    background-color: #dbd5d5;
+    height: 60rem;
+    /* background-color: #dbd5d5; */
+    background: linear-gradient(to top, rgb(174, 32, 174), rgb(215, 245, 216), rgb(243, 65, 94));
     border-radius: 0;
     background-size: cover;
     background-repeat: no-repeat;
@@ -92,7 +93,7 @@ nav ul {
     font-weight: 100;
     font-size: 2rem;
     line-height:8rem;
-    color: #514747;
+    color: #666262;
     word-spacing: 1rem;
     align-items: center;
     text-align: center;
@@ -115,25 +116,49 @@ nav ul {
     font-style: italic ;
     font-size: 7rem;
     line-height:10rem;
-    color: #121111;
+    color: black;
     word-spacing: 1rem;
     align-items: center;
     text-align: center;
-    top:13rem;
+    top:10rem;
     text-decoration: underline;
   }
   .desc{
     position: absolute;
     width: 60rem;
     height: 50rem;
-    font-family: 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Arial Narrow', Arial, sans-serif Arial, Helvetica, sans-serif;
     font-weight: 100;
     font-size: 1.7rem;
-    line-height:3rem;
+    line-height:2.5rem;
     color: #141313;
     word-spacing: 0.5rem;
     text-align: center;
     top:25rem;
     left:25rem;
+  }
+  .sermain{
+    position: relative;
+    width: 100%;
+    height: 10rem;
+    background-origin: border-box;
+  }
+  .service{
+     height: 70rem;
+     width: 100%;
+  }
+  .hser{
+    position: absolute;
+    width: 100%;
+    height: 10rem;
+    font-weight: 900;
+    font-style: italic ;
+    font-size: 8rem;
+    line-height:10rem;
+    color: black;
+    word-spacing: 1rem;
+    align-items: center;
+    text-align: center;
+    top:6rem;
   }
   
