--- a/prot.css
+++ b/prot.css
@@ -78,7 +78,7 @@ nav ul {
     width: 100%;
     height: 60rem;
     /* background-color: #dbd5d5; */
-    background: linear-gradient(to top, rgb(174, 32, 174), rgb(215, 245, 216), rgb(243, 65, 94));
+    background: linear-gradient(to top, rgb(150, 42, 150), rgb(215, 245, 216), rgb(243, 65, 94));
     border-radius: 0;
     background-size: cover;
     background-repeat: no-repeat;
@@ -161,18 +161,8 @@ nav ul {
     text-align: center;
     top:6rem;
   }
-  .flex-container {
-    display: flex;
-    position: absolute;
+  .box{
+    border:2px solid black;
   }
   
-  .box {
-    width: 100px;
-    height: 100px;
-    background-color: #333;
-    color: #fff;
-    font-size: 20px;
-    text-align: center;
-    line-height: 100px;
-  }
   
