--- a/prot.css
+++ b/prot.css
@@ -14,13 +14,8 @@
     background-repeat: no-repeat;
     background-position:right;
     background-origin: border-box;
+    margin:0;
 }
-
-/* width: 50rem;
-height: 5rem;
-background: #9C9191;
-left:64rem; */
-
 nav {
     position: fixed;
     display: flex;
@@ -36,7 +31,6 @@ nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
-    
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
   nav li {
@@ -78,7 +72,8 @@ nav ul {
     width: 100%;
     height: 60rem;
     /* background-color: #dbd5d5; */
-    background: linear-gradient(to top, rgb(150, 42, 150), rgb(215, 245, 216), rgb(243, 65, 94));
+    /* background: linear-gradient( rgb(40, 40, 113), rgb(215, 245, 216), rgb(110, 65, 73)); */
+    background: linear-gradient(#674949, #4c5296);
     border-radius: 0;
     background-size: cover;
     background-repeat: no-repeat;
@@ -93,7 +88,7 @@ nav ul {
     font-weight: 100;
     font-size: 2rem;
     line-height:8rem;
-    color: #666262;
+    color: #eed3d3;
     word-spacing: 1rem;
     align-items: center;
     text-align: center;
@@ -131,21 +126,19 @@ nav ul {
     font-weight: 100;
     font-size: 1.7rem;
     line-height:2.5rem;
-    color: #141313;
+    color: #f3eeee;
     word-spacing: 0.5rem;
     text-align: center;
     top:25rem;
     left:25rem;
+    opacity: 0.8;
   }
   .sermain{
     position: relative;
     width: 100%;
-    height: 10rem;
+    height: 55rem;
+    background: linear-gradient(to top, rgb(64, 97, 231), rgb(100, 156, 101),rgb(234, 234, 77));
     background-origin: border-box;
-  }
-  .service{
-     height: 70rem;
-     width: 100%;
   }
   .hser{
     position: absolute;
@@ -159,20 +152,25 @@ nav ul {
     word-spacing: 1rem;
     align-items: center;
     text-align: center;
-    top:6rem;
+    top:3rem;
   }
-  .flex{
+  .flex-container {
     display: flex;
-    padding:10rem;
+    position: absolute;
+    top:13rem;
   }
-  .box{
-    border:0.1rem solid black;
-    padding:2rem;
-    margin:9rem ;
+  .box {
+    width: 30rem;
+    height: 30rem;
+    /* background-color: #333; */
+    text-align: center;
+    margin:4rem;
+    top:10rem;
   }
-  .boxi{
-    height:30rem;
-    width:40rem;
+  .imgs {
+    top:10rem;
+    max-width: 100%;
+    max-height: 100%;
   }
-  
+
   
