--- a/prot.css
+++ b/prot.css
@@ -172,5 +172,12 @@ nav ul {
     max-width: 100%;
     max-height: 100%;
   }
+  .mainform{
+    position: relative;
+    width: 100%;
+    height: 55rem;
+    background: linear-gradient( rgb(107, 111, 123), rgb(61, 46, 174));
+    background-origin: border-box;
+  }
 
   
