--- a/prot.css
+++ b/prot.css
@@ -176,8 +176,20 @@ nav ul {
     position: relative;
     width: 100%;
     height: 55rem;
-    background: linear-gradient( rgb(107, 111, 123), rgb(61, 46, 174));
+    background: linear-gradient( rgb(141, 94, 94), rgb(87, 69, 222));
     background-origin: border-box;
   }
-
-  
+.hcont{
+  position: absolute;
+  width: 100%;
+  height: 10rem;
+  font-weight: 900;
+  font-style: italic ;
+  font-size: 8rem;
+  line-height:10rem;
+  color: rgb(15, 14, 14);
+  word-spacing: 1rem;
+  align-items: center;
+  text-align: center;
+  top:3rem;
+} 
