--- a/prot.css
+++ b/prot.css
@@ -245,15 +245,15 @@ nav ul {
 }
 .fnamee{   
   position: absolute;
-  width: 100%S;
-  height: 29px;
-  left: 30px;
-  top: 230px;
+  width: 100%;
+  height: 1.8rem;
+  left: 1.9rem;
+  top: 14.3rem;
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 450;
-  font-size: 25px;
-  line-height: 29px;
+  font-size: 1.5rem;
+  line-height: 1.8rem;
   color: #080808;
   }
 #fname{
