--- a/prot.css
+++ b/prot.css
@@ -133,7 +133,7 @@ nav ul {
     left:25rem;
     opacity: 0.8;
   }
-  .sermain{
+  /* .sermain{
     position: relative;
     width: 100%;
     height: 55rem;
@@ -162,7 +162,6 @@ nav ul {
   .box {
     width: 30rem;
     height: 30rem;
-    /* background-color: #333; */
     text-align: center;
     margin:4rem;
     top:10rem;
@@ -171,7 +170,7 @@ nav ul {
     top:10rem;
     max-width: 100%;
     max-height: 100%;
-  }
+  } */
   .mainform{
     position: relative;
     width: 100%;
@@ -259,91 +258,58 @@ nav ul {
 #fname{
   position: absolute;
   box-sizing: border-box;
-  width: 600px;
-  height: 45px;
-  left: 30px;
-  top: 260px;
-  border: 1px solid #0e0d0d;
-  border-radius: 3px;
+  width: 37.5rem;
+  height: 2.8rem;
+  left: 1.9rem;
+  top: 16.2rem;
+  border: 0.1rem solid #0e0d0d;
 }
 .femaill{
   position: absolute;
-  width: 100%;
-  height: 29px;
-  left: 30px;
-  top: 320px;
-  font-family: 'PT Sans';
-  font-style: normal;
+  width: 37.5rem;
+  height: 2.8rem;
+  left: 1.9rem;
+  top: 20rem;
   font-weight: 450;
-  font-size: 25px;
-  line-height: 29px;
-  color: #080808;
+  font-size: 1.5rem;
   } 
 #emaiil{
       position: absolute;
-      box-sizing: border-box;
-      width: 600px;
-      height: 45px;
-      left: 30px;
-      top: 350px;
-      border: 1px solid #0e0d0d;
-      border-radius: 3px;
+      width: 37.5rem;
+      height: 2.8rem;
+      left: 1.9rem;
+      font-weight: 450;
+      font-size: 1.5rem;
+      top: 21.8rem;
+      border: 0.1rem solid #0e0d0d;
 }
 .fphonee{
   position: absolute;
-  width: 100%;
-  height: 29px;
-  left: 30px;
-  top: 410px;
-  font-family: 'PT Sans';
-  font-style: normal;
+  width: 37.5rem;
+  height: 2.8rem;
+  left: 1.9rem;
+  /* top: 40rem; */
   font-weight: 450;
-  font-size: 25px;
-  line-height: 29px;
-  color: #080808;
+  font-size: 1.5rem;
+  top: 25.6rem;
+
 }
 #phonee{
   position: absolute;
-  box-sizing: border-box;
-  width: 600px;
-  height: 45px;
-  left: 30px;
-  top: 440px;
-  border: 1px solid #0e0d0d;
-  border-radius: 3px;
-}
-#myFile{
-  position: absolute;
-  box-sizing: border-box;
-  width: 600px;
-  height: 200px;
-  left: 30px;
-  top: 530px;
-  border: 1px solid #0e0d0d;
-  border-radius: 3px;
-  background-color: white;
-  text-align: center;
-}
-.maxx{
-  position: absolute;
-  width: 100%;
-  height: 29px;
-  right:30px;
-  text-align: right;
-  top: 710px;
-  font-family: 'PT Sans';
-  font-style: normal;
+  width: 37.5rem;
+  height: 2.8rem;
+  left: 1.9rem;
   font-weight: 450;
-  font-size: 20px;
-  line-height: 29px;
-  color: #080808;
+  font-size: 1.5rem;
+  border: 0.1rem solid #0e0d0d;
+  top:27.5rem;
 }
 .ftextt{
   position: absolute;
   width: 100%;
-  height: 29px;
-  left: 30px;
-  top: 760px;
+  height: 1.8rem;
+  left: 1.9rem;
+  top: 45rem;
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 450;
