--- a/prot.css
+++ b/prot.css
@@ -309,18 +309,18 @@ nav ul {
   width: 100%;
   height: 1.8rem;
   left: 1.9rem;
-  top: 45rem;
+  top: 32rem;
   font-family: 'PT Sans';
   font-style: normal;
   font-weight: 450;
-  font-size: 25px;
-  line-height: 29px;
+  font-size: 1.7rem;
+  line-height: 1.85rem;
   color: #080808;
 }
 #textare{
   position: absolute;
   box-sizing: border-box;
-  width: 600px;
+  width: 37.5rem;
   height: 250px;
   left: 30px;
   top: 790px;
