--- a/prot.css
+++ b/prot.css
@@ -174,7 +174,7 @@ nav ul {
   .mainform{
     position: relative;
     width: 100%;
-    height: 60rem;
+    height: 85rem;
     background: linear-gradient( rgb(141, 94, 94), rgb(87, 69, 222));
     background-origin: border-box;
   }
@@ -194,8 +194,8 @@ nav ul {
 } 
 .formm{
   position: relative;
-  width: 50rem;
-  height: 75rem;
+  width: 47rem;
+  height: 55rem;
   left: 30rem;
   top: 17rem;
   background-color: #568eb9;
@@ -321,21 +321,20 @@ nav ul {
   position: absolute;
   box-sizing: border-box;
   width: 37.5rem;
-  height: 250px;
-  left: 30px;
-  top: 790px;
+  height: 15.65rem;
+  left: 1.9rem;
+  top: 34rem;
   border: 1px solid #0e0d0d;
-  border-radius: 3px;
+  border-radius: 0.2rem;
 }
 .submitt{
   position: absolute;
-  width: 100px;
-  height: 50px;
-  /* left: 50px; */
-  top: 1100px;
-  right:30px;
+  width: 6.25rem;
+  height: 3.125rem;
+  top:50rem;
+  right:1.9rem;
   align-items: right;
   background: #1013e7;
-  border-radius: 0px;
+  border-radius: 0;
   color: white;
 }
