--- a/prot.css
+++ b/prot.css
@@ -198,7 +198,7 @@ nav ul {
   height: 55rem;
   left: 30rem;
   top: 17rem;
-  background-color: #568eb9;
+  background-color: #508cb9;
   align-items: center;
 }
 .work-form{
