--- a/prot.css
+++ b/prot.css
@@ -338,3 +338,24 @@ nav ul {
   border-radius: 0;
   color: white;
 }
+.involvepro{
+  position: relative;
+  width: 100%;
+  height: 85rem;
+  background: linear-gradient( rgb(122, 76, 76), rgb(54, 40, 157));
+  background-origin: border-box;
+}
+.projp{
+  position: absolute;
+  width: 100%;
+  height: 50rem;
+  font-family: Arial, sans-serif;
+  font-weight: 100;
+  font-size: 1.7rem;
+  line-height:8rem;
+  color: #eed3d3;
+  word-spacing: 1rem;
+  align-items: center;
+  text-align: center;
+  top:6rem;
+}
