--- a/prot.css
+++ b/prot.css
@@ -342,7 +342,7 @@ nav ul {
   position: relative;
   width: 100%;
   height: 85rem;
-  background: linear-gradient( rgb(122, 76, 76), rgb(54, 40, 157));
+  background: rgb(172, 166, 166);
   background-origin: border-box;
 }
 .projp{
@@ -353,9 +353,37 @@ nav ul {
   font-weight: 100;
   font-size: 1.7rem;
   line-height:8rem;
-  color: #eed3d3;
+  color: #201e1e;
   word-spacing: 1rem;
   align-items: center;
   text-align: center;
-  top:6rem;
+  top:3rem;
+}
+.container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.photo-box {
+  width: 40%;
+  height: 25rem;
+  margin: 10rem;
+  top:30rem;
+}
+.pn{
+  top:10rem;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+/* Responsive styles */
+@media (max-width: 800px) {
+  .photo-box {
+    width: 50%;
+  }
+}
+
+@media (max-width: 400px) {
+  .photo-box {
+    width: 100%;
+  }
 }
