--- a/prot.css
+++ b/prot.css
@@ -135,14 +135,16 @@ nav ul {
 .involvepro{
   position: relative;
   width: 100%;
-  height: 85rem;
+  height: 110vh;
   background: rgb(172, 166, 166);
   background-origin: border-box;
+  border: 3px solid black;
 }
 .projp{
   position: absolute;
+  border: 1px solid black;
   width: 100%;
-  height: 50rem;
+  height: 5rem;
   font-family: Arial, sans-serif;
   font-weight: 100;
   font-size: 1.7rem;
@@ -151,18 +153,25 @@ nav ul {
   word-spacing: 1rem;
   align-items: center;
   text-align: center;
-  top:3rem;
+  /* top:3rem; */
 }
 .container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  /* flex-wrap: wrap; */
+  margin: 5rem;
+  gap: 5rem;
+  position: absolute;
+  top:2rem;
+  border: 7px solid yellow ;
 }
 .photo-box {
-  width: 40%;
+  width: 100%;
   height: 25rem;
-  margin: 10rem;
-  top:30rem;
-  display: flex;
+  /* margin: 10rem; */
+  /* top:10rem; */
+  border: 5px solid green;
+  /* display: flex; */
 }
 .pn{
   top:10rem;
@@ -230,7 +239,7 @@ left: 1.8rem;
 top: 10rem;
 font-family: 'PT Sans';
 font-style: normal;
-font-weight: 400;
+font-weight: 600;
 font-size: 1.1rem;
 line-height: 2rem;
 color: #0c0b0b;
