--- a/prot.css
+++ b/prot.css
@@ -328,7 +328,7 @@ border-radius: 0;
 color: white;
 }
 footer {
-  background-color: rgb(250, 245, 245);
+  background-color: rgb(216, 197, 197);
   color: rgb(8, 8, 8);
   padding: 1em 0;
   height: 13rem;
@@ -336,7 +336,7 @@ footer {
 }
 .copyright{
   position: absolute;
-  top:10rem;
+  top:8rem;
   left:35rem;
   font-size:2rem;
   font-weight: 600;
@@ -371,8 +371,8 @@ footer {
   font-size: 3rem;
   color: rgb(11, 11, 11);
 }
-.facebook:hover i, .instagram:hover i{
-  color: rgb(25, 74, 18);
+.facebook:hover i, .instagram:hover i, .gmail:hover i, .github:hover i, .linkedin:hover i {
+  color: rgb(233, 9, 91);
 }
 
 
