--- a/prot.css
+++ b/prot.css
@@ -374,3 +374,8 @@ footer {
 .facebook:hover i, .instagram:hover i, .gmail:hover i, .github:hover i, .linkedin:hover i {
   color: rgb(205, 17, 86);
 }
+@media only screen and (max-width: 600px) {
+  body {
+    font-size: 12px;
+  }
+}
